# AgentSpace

./: .gitignore  Makefile  README.md
backend/: graph.py  main.py  pyproject.toml  requirements.txt  tools.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
