[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "langgraph-prebuilt>=0.6.3",
    "openai>=1.99.1",
    "uvicorn>=0.35.0",
]
